--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "bootstrap-vue": "^2.23.1",
         "jquery": "^3.7.1",
         "sass": "^1.32.12",
+        "vuetable-2": "2.0.0-beta.4",
         "vuetify": "^2.6.15",
         "vuetify2-component-types": "^2.6.8"
     }
