--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     #command: bash -c "php artisan migrate"
     environment:
             - DB_CONNECTION=mysql
-            - DB_HOST=127.0.0.1
+            - DB_HOST=db
             - DB_PORT=3306
             - DB_DATABASE=eyecare
             - DB_USERNAME=root
